--- a/Hyperlabel/MainPage.xaml
+++ b/Hyperlabel/MainPage.xaml
@@ -21,7 +21,11 @@
             <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!"
                    FontSize="16"
                    Padding="30,0,30,0" />
+            <!--<hyperlabel:HyperLinksbel LinksText="Learn more at &#10; https://aka.ms/xamarin-quickstart &#10; and &#10; https://google.com. &#10; This Xamarin.Forms Forums question can be visited at &#10; https://social.msdn.microsoft.com/Forums/en-US/d27815ce-d60a-43ab-a2b6-0ca3e00167fe/make-multiple-links-in-labels-clickable?forum=xamarinforms#latest &#10; but Google only at &#10; https://www.google.com/"
+                                      FontSize="16"
+                                      Padding="30,0,30,0" />-->
             <hyperlabel:HyperLinksbel LinksText="Learn more at &#10; https://aka.ms/xamarin-quickstart &#10; and &#10; https://google.com. &#10; This Xamarin.Forms Forums question can be visited at &#10; https://social.msdn.microsoft.com/Forums/en-US/d27815ce-d60a-43ab-a2b6-0ca3e00167fe/make-multiple-links-in-labels-clickable?forum=xamarinforms#latest &#10; but Google only at &#10; https://www.google.com/"
+                                      LinksNames="Xamarin quickstart, , Make multiple links clickable on Label ,Google"
                                       FontSize="16"
                                       Padding="30,0,30,0" />
 
